fix: remove sticky from product gallery on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -690,8 +690,7 @@ footer {
 }
 
 .product-gallery {
-  position: sticky;
-  top: 100px;
+  position: relative;
 }
 
 .main-image-viewport {
